styles.css
html, body{
    margin: 0;
    height: 100%;
}

body{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    box-sizing: border-box;
    background-image: url(images/rock-paper-scissors.svg);
    background-repeat: no-repeat;
    background-position: center;
    height: 100%;
    background-size: cover;
    background-color: rgba(0, 0, 0, 0.212);
}

#platform{
    display: flex;
    flex-direction: column;
    align-items: center;
    border-radius: 15px;
    padding: 15px;
    background-color: rgba(0, 0, 0, 0.212);
}

h1{
    color: white;
    background-color: rgba(0, 0, 0, 0.39);
    width: 100%;
    height: 50px;
    margin: 0;
    border-radius: inherit;
    display: flex;
    justify-content: center;
    align-items: center;
    border: solid black;
}

#content-area{
    display: flex;
    flex-direction: column;
    align-items: stretch;
    height: 500px;
    width: 500px;
}

#btn-container{
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex: 0 1 50%;
}

.play-btn:hover, #reset-btn:hover{
    background-color: lightgray;
}

.play-btn{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 150px;
    width: 125px;
    padding: 15px;
    border-radius: 15px;
    background-color: whitesmoke;
}

.btn-icon{
    height: 70px;
    width: 70px;
}

#rock-icon{
    height: 55px;
    margin-top: 7px;
    margin-bottom: 5px;
}

#result-area{
    border: solid black;
    border-radius: 15px;
    flex: 0 1 50%;
    background-color: rgba(0, 0, 0, 0.39);
    color: white;
    padding: 15px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

#totals-table{
    background-color: whitesmoke;
    color: black;
    height: 30%;
    width: 100%;
    margin: 15px 0;
}

table{
    border-spacing: 0;
    border-collapse: separate;
    border-radius: 15px;
    border: 1px solid gray;
}

table th:not(:last-child),
table td:not(:last-child) {
 border-right: 1px solid gray;
}

table>thead>tr:not(:last-child)>th,
table>thead>tr:not(:last-child)>td,
table>tbody>tr:not(:last-child)>th,
table>tbody>tr:not(:last-child)>td,
table>tfoot>tr:not(:last-child)>th,
table>tfoot>tr:not(:last-child)>td,
table>tr:not(:last-child)>td,
table>tr:not(:last-child)>th,
table>thead:not(:last-child),
table>tbody:not(:last-child),
table>tfoot:not(:last-child) {
 border-bottom: 1px solid gray;
}

td{
    text-align: center;
}


#reset-btn{
    width: 100%;
    margin-top: 30px;
    height: 50px;
    border-radius: 10px;
    background-color: whitesmoke;
}

